# scCP

./: .gitignore  LICENSE  README.md  gmmpractice.ipynb  imports.ipynb  loadings_time_series_PC1.csv  loadings_time_series_PC2.csv  makefile  nohup.out  pyproject.toml
.github/workflows/: build.yml  test.yml
RISE/: gating.py  imports.py
RISE/data/Thomson/: meta.csv
RISE/figures/: common.py  figure2b_e.py  figure2f_h.py  figure3.py  figure4d.py  figure4e_k.py  figure5a_e.py  figure5f_j.py  figureS10.py  figureS2.py  figureS4.py  figureS8e_f.py  figureS8g_h.py  figureS9a_d.py
RISE/figures/commonFuncs/: plotGeneral.py  plotLupus.py  plotPaCMAP.py
RISE/notebooks/thomson/: Thomson_Annot.ipynb
gmm/: CoHimport.py  GMM.py  imports.py  regression.py  scImport.py  tensor.py
gmm/data/: NNMF_Errors.npy  ThompsonCellTypes.csv
gmm/data/NNMF_Facts/: NNMF_10_Components.npy  NNMF_10_Loadings.csv  NNMF_10_Scores.npy  NNMF_11_Components.npy  NNMF_11_Loadings.csv  NNMF_11_Scores.npy  NNMF_12_Components.npy  NNMF_12_Loadings.csv  NNMF_12_Scores.npy  NNMF_13_Components.npy  NNMF_13_Loadings.csv  NNMF_13_Scores.npy  NNMF_14_Components.npy  NNMF_14_Loadings.csv  NNMF_14_Scores.npy  NNMF_15_Components.npy  NNMF_15_Loadings.csv  NNMF_15_Scores.npy  NNMF_16_Loadings.csv  NNMF_16_Scores.npy  NNMF_17_Loadings.csv  NNMF_17_Scores.npy  NNMF_18_Loadings.csv  NNMF_18_Scores.npy  NNMF_19_Loadings.csv  NNMF_19_Scores.npy  NNMF_1_Components.npy  NNMF_1_Loadings.csv  NNMF_1_Scores.npy  NNMF_20_Loadings.csv  NNMF_20_Scores.npy  NNMF_2_Components.npy  NNMF_2_Loadings.csv  NNMF_2_Scores.npy  NNMF_3_Components.npy  NNMF_3_Loadings.csv  NNMF_3_Scores.npy  NNMF_4_Components.npy  NNMF_4_Loadings.csv  NNMF_4_Scores.npy  (+15 more)
gmm/figures/: common.py  commonIL2.py  commonsynthetic.py  figure0.py  figure1.py  figure10.py  figure11.py  figure12.py  figure13.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure7.py  figure8.py  figure9.py
gmm/tests/: test_GMM.py  test_import.py
scCP/: regression.py  synthetic.py
scCP/data/: features.tsv
scCP/figures/: commonIL2.py  figure1.py  figure12.py
scCP/imports/: CoH.py  scRNA.py
sccp/: celltype.py  crossVal.py  decomposition.py  factorization.py  gating.py  geneontology.py  imports.py  logisitcReg.py  logisticReg.py  metric.py  parafac.py  parafac2.py  regression.py  stats.py  synthetic.py  tensor.py
sccp/data/: BotGenes_Cmp30.csv  CoH_Patient_Status.csv  IL2_Total_Errors.npy  Pf2-metrics.xlsx  ScibMetrics.xlsx  Synthetic1_Pf2_Errors.npy  Synthetic1_Total_Errors.npy  Synthetic2_Pf2_Errors.npy  Synthetic2_Total_Errors.npy  Synthetic3_Pf2_Errors.npy  Synthetic3_Total_Errors.npy  ThompsonCellTypes.csv  TopBotGenes_Cmp25.csv  TopBotGenes_Cmp30.csv  TopGenes_Cmp30.csv  barcodes.tsv  benchmark_results.csv  pca-metrics.xlsx  r2x_values.json  scRNA_CellCount.csv  scRNA_Total_Errors.npy
sccp/data/CITEseq/: CITEseqBotGenes_Cmp40.csv  CITEseqTopGenes_Cmp40.csv  CITEseq_FactorACmp80.npy  CITEseq_FactorBCmp80.npy  CITEseq_WeightCmp80.npy  HamadCITEseqCondNames.npy  HamadCITEseqProtNames.npy  (+1 more)
sccp/figures/: common.py  figure0.py  figure1.py  figure10.py  figure12.py  figure1a.py  figure2.py  figure2b-e.py  figure2b_e.py  figure2f_h.py  figure3.py  figure3a.py  figure3b.py  figure3c.py  figure4.py  figure4a-c.py  figure4a.py  figure4a_c.py  figure4b.py  figure4c.py  figure4d.py  figure4e_k.py  figure4f-k.py  figure4f_k.py  figure5.py  figure5a.py  figure5a_e.py  figure5b_e.py  figure5c.py  figure5f.py  figure5f_j.py  figure6.py  figure7.py  figure8.py  figure9.py  figureA1.py  figureB1.py  figureCITEseq1.py  figureCITEseq2.py  figureCITEseq3.py  (+93 more)
sccp/imports/: CoH.py  anndata.py  citeseq.py  cytok.py  gating.py  scRNA.py  scib.py
sccp/tests/: test_CP.py  test_CrossVal.py  test_GMM.py  test_anndata.py  test_import.py  test_lupus.py  test_parafac2.py
(+39 files in other folders)
