[tool.poetry]
name = "sccp"
version = "0.1.0"
description = "Single cell analysis across conditions using PARAFAC2."
authors = ["Andrew Ramirez", "Aaron Meyer <git@asmlab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26"
scipy = "^1.12"
scikit-learn = "^1.4"
seaborn = "^0.13.2"
pandas = "^2.2.1"
tensorly = "0.8.1"
parafac2 = { git = "https://github.com/meyer-lab/parafac2.git", rev = "c3aebffc37e42b924a54805946e9233874123fb9" }
h5netcdf = "^1.3"
anndata = "^0.10.3"
datashader = "^0.16"
gseapy = "^1.1"
scanpy = "^1.9"
pacmap = "^0.7.1"
leidenalg = "^0.10.1"
tqdm = "^4.66.1"
cupy-cuda12x = "^13.0"
setuptools = "^68.2.2"
tlviz = "^0.1.1"
doubletdetection = "^4.2"
statsmodels = "^0.14.1"
dask = {extras = ["dataframe"], version = "^2024.3.1"}

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
mypy = "^1.9"
pylint = "^3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "sccp.figures.common:genFigure"
factor = "sccp.imports:factorSave"