[project]
name = "sccp"
version = "0.1.0"
description = "Single cell analysis across conditions using PARAFAC2."
authors = [{name = "Andrew Ramirez"}, {name = "Aaron Meyer", email = "git@asmlab.org" }]
license = "MIT"
requires-python = ">= 3.12"


dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "seaborn>=0.13.2",
    "pandas>=2.2.1",
    "tensorly>=0.8.1",
    "parafac2 @ git+https://github.com/meyer-lab/parafac2.git@6600c677a77d0f242668babf39559cf7953ff534",
    "h5netcdf>=1.3",
    "anndata>=0.10.3",
    "datashader>=0.16",
    "gseapy>=1.1",
    "scanpy>=1.10",
    "pacmap>=0.7.1",
    "leidenalg>=0.10.1",
    "tqdm>=4.66.1",
    "tlviz>=0.1.1",
    "doubletdetection >=4.2",
    "statsmodels>=0.14.1",
    "dask[dataframe]>=2024.3.1",
    "scib>=1.1.5"]



readme = "README.md"

[project.scripts]
fbuild = "sccp.figures.common:genFigure"
factor = "sccp.imports:factorSave"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sccp"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
